--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
 * {
   font-family: 'Open Sans';
-  
 }
 .body {
   height: 100vh;
   font-size: 14px;
-    
 }
 #textopersonalizado {
   color: #ff9900;
 }
-#textonegrito{
+#textonegrito {
   font-weight: 700;
 }
 
@@ -18,9 +16,9 @@
   margin: auto;
   text-align: center;
 }
-#imagem{
+#imagem {
   text-align: center;
-    }
+}
 #imagem img {
   width: 348px;
   height: 223px;
@@ -29,19 +27,18 @@
 #titulo {
   font-family: 'Inter';
   font-size: 49px;
+  font-weight: bold;
+  line-height: 56px;
   display: flex;
-  gap: 4px;
   justify-content: center;
   margin: 72px 10px 32px 20px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
 }
 
 #texto {
   color: #7d7987;
   font-weight: 500px;
 }
-
 
 footer {
   margin: 80px 4px auto auto;
@@ -50,13 +47,13 @@ ul {
   list-style: none;
   display: flex;
   gap: 16px;
-  justify-content: center ;
+  justify-content: center;
 }
 ul li a {
   text-decoration: none;
   color: #ff9900;
 }
-#decoracao{
+#decoracao {
   position: absolute;
   right: 0;
   bottom: 0;
